<resources>
    <string name="app_name">Irish Skate Buddy</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="label_skateparks">SKATE PARKS</string>
    <string name="label_skateshops">SKATE SHOPS</string>
    <string name="label_skatespots">SKATE SPOTS</string>

    <string name="label_maps">MAPS</string>
    <string name="label_friends">FRIENDS</string>
    <string name="label_tricklist">TRICK LIST</string>
    <string name="label_gallery">GALLERY</string>
    <string name="label_createspot">CREATE SPOT</string>
    <string name="label_camera">CAMERA</string>
    <string name="title_activity_skate_park__map_">Map</string>
    <string name="title_activity_main_map">MainMapActivity</string>

    <string name="item_clustering">Clustering</string>
    <string name="item_heat_map">Heat Map</string>
    <string name="item_polylines">Polyline Decoding</string>
    <string name="item_spherical_geometry">Spherical Geometry Utils</string>

    <string-array name="list_items">
        <item>@string/label_skateparks</item>
        <item>@string/label_skateshops</item>
        <item>@string/label_skatespots</item>
        <item>@string/label_friends</item>
        <item>@string/label_tricklist</item>
        <item>@string/label_gallery</item>
        <item>@string/label_createspot</item>
        <item>@string/label_camera</item>

    </string-array>
    <string name="title_activity_tricklist">Trick List</string>
    <string name="title_activity_map_container">MapContainerActivity</string>
    <string name="title_activity_skate_park__list_">SkatePark_List_Activity</string>
    <string name="title_activity_skate_park__detail_">SkatePark_Detail_Activity</string>
    <string name="title_activity_skate_park__detail__map_">Map</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="txt_moreinfo">More Info</string>

    <string name="title_address">Address</string>
    <string name="title_phone">Phone</string>
    <string name="title_location">Location</string>
    <string name="title_website">Website</string>
    <string name="title_email">Email</string>
    <string name="title_lights">Lights</string>
    <string name="title_helmets">Helmets</string>
    <string name="title_indoor_outdoor">Indoor/Outdoor</string>
    <string name="title_surface">Surface</string>
    <string name="title_opening_hours">Opening Hours</string>
    <string name="title_cost">Cost</string>

    <string name="button_showonmap">Show Map</string>
    <string name="title_activity_single_park__maps">Map</string>

</resources>
