<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/AccentColor">

        <ImageView
            android:id="@+id/park_detail_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:cropToPadding="false"

            android:src="@drawable/spot1" />

        <TextView
            android:id="@+id/park_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text_layout"
            android:layout_alignParentStart="false"
            android:gravity="center"
            android:text="New Text"
            android:textColor="#ffffff"
            android:textSize="@dimen/large_header" />

        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/park_detail_img"
            android:background="@color/LightPrimaryText"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alignmentMode="alignBounds"
                android:columnCount="3"
                android:columnOrderPreserved="false"
                android:orientation="vertical"
                android:useDefaultMargins="true">

                <TextView
                    android:id="@+id/header_lights"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="0"

                    android:text="@string/title_lights"
                    android:textColor="@color/PrimaryText"
                    android:textSize="@dimen/sub_header" />

                <TextView
                    android:id="@+id/park_detail_lights"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="1"

                    android:text="New Text"
                    android:textColor="@color/SecondaryText"
                    android:textSize="@dimen/body_text" />

                <Space
                    android:layout_column="1"
                    android:layout_columnSpan="1"
                    android:layout_gravity="fill"
                    android:layout_row="0" />

                <TextView
                    android:id="@+id/header_helmets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="0"

                    android:text="@string/title_helmets"
                    android:textColor="@color/PrimaryText"
                    android:textSize="@dimen/sub_header" />

                <TextView
                    android:id="@+id/park_detail_helmets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="1"

                    android:text="New Text"
                    android:textColor="@color/SecondaryText"
                    android:textSize="@dimen/body_text" />

                <TextView
                    android:id="@+id/header_indoor_outdoor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="2"
                    android:text="@string/title_indoor_outdoor"
                    android:textColor="@color/PrimaryText"
                    android:textSize="@dimen/sub_header" />

                <TextView
                    android:id="@+id/park_indoor_outdoor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="3"
                    android:text="New Text"
                    android:textColor="@color/SecondaryText"
                    android:textSize="@dimen/body_text" />

                <TextView
                    android:id="@+id/header_surface"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="2"
                    android:text="@string/title_surface"
                    android:textColor="@color/PrimaryText"
                    android:textSize="@dimen/sub_header" />

                <TextView
                    android:id="@+id/park_detail_surface"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="3"
                    android:text="New Text"
                    android:textColor="@color/SecondaryText"
                    android:textSize="@dimen/body_text" />

                <TextView
                    android:id="@+id/header_opening_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="4"
                    android:text="@string/title_opening_hours"
                    android:textColor="@color/PrimaryText"
                    android:textSize="@dimen/sub_header" />

                <TextView
                    android:id="@+id/park_opening_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="5"
                    android:maxLines="100"
                    android:text="New Text"
                    android:textColor="@color/SecondaryText"
                    android:textSize="@dimen/body_text"

                    />

                <TextView
                    android:id="@+id/header_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="4"
                    android:text="@string/title_cost"
                    android:textColor="@color/PrimaryText"
                    android:textSize="@dimen/sub_header" />

                <TextView
                    android:id="@+id/park_detail_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="5"
                    android:text="New Text"
                    android:textColor="@color/SecondaryText"
                    android:textSize="@dimen/body_text" />

                <View
                    android:id="@+id/div1"
                    style="@style/Divider"
                    android:layout_column="0"
                    android:layout_columnSpan="3"
                    android:layout_row="6" />

                <TextView
                    android:id="@+id/header_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="7"
                    android:text="@string/title_address"
                    android:textColor="@color/PrimaryText"
                    android:textSize="@dimen/sub_header" />

                <TextView
                    android:id="@+id/park_detail_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="8"
                    android:maxLines="100"
                    android:text="New Text"
                    android:textColor="@color/SecondaryText"
                    android:textSize="@dimen/body_text" />

                <TextView
                    android:id="@+id/header_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="7"
                    android:text="@string/title_phone"
                    android:textColor="@color/PrimaryText"
                    android:textSize="@dimen/sub_header" />

                <TextView
                    android:id="@+id/park_detail_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="8"
                    android:autoLink="phone"
                    android:text="New Text"
                    android:textColor="@color/SecondaryText"
                    android:textSize="@dimen/body_text" />

                <TextView
                    android:id="@+id/header_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="9"
                    android:text="@string/title_email"
                    android:textColor="@color/PrimaryText"
                    android:textSize="@dimen/sub_header" />

                <TextView
                    android:id="@+id/park_detail_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="10"
                    android:text="New Text"
                    android:textColor="@color/SecondaryText"
                    android:textSize="@dimen/body_text"
                    android:autoLink="email"/>

                <TextView
                    android:id="@+id/header_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="9"
                    android:text="@string/title_website"
                    android:textColor="@color/PrimaryText"
                    android:textSize="@dimen/sub_header" />

                <TextView
                    android:id="@+id/park_detail_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="10"
                    android:text="New Text"
                    android:textColor="@color/SecondaryText"
                    android:textSize="@dimen/body_text"
                    android:autoLink="web"/>

                <View
                    android:id="@+id/div2"
                    style="@style/Divider"
                    android:layout_column="0"
                    android:layout_columnSpan="3"
                    android:layout_row="11" />


                <TextView
                    android:id="@+id/header_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="12"
                    android:text="@string/title_location"
                    android:textColor="@color/PrimaryText"
                    android:textSize="@dimen/sub_header" />

                <TextView
                    android:id="@+id/park_detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_row="13"
                    android:text="New Text"
                    android:textColor="@color/SecondaryText"
                    android:textSize="@dimen/body_text" />
                <Button
                    android:id="@+id/park_detail_openmap"
                    android:layout_column="2"
                    android:layout_row="13"
                    android:text="@string/button_showonmap"
                    android:textColor="@color/AccentColor"
                    style="@style/Widget.AppCompat.Button.Borderless" />
            </GridLayout>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>